<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".view.menu_activity.MenuActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="156dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_menu_home"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#99ffffff"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/title_menu_home"
            android:layout_marginTop="32dp"
            android:textSize="28dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/black"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btCachCheBien"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="0.5dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/bt_cach_che_bien"
                android:textAllCaps="true"
                android:textSize="12dp"/>

            <Button
                android:id="@+id/btQuocGia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="0.5dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:text="@string/bt_quoc_gia"
                android:foreground="?android:attr/selectableItemBackground"
                android:textAllCaps="true"
                android:textSize="12dp"/>
        </LinearLayout>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="4dp"
        android:id="@+id/rvMenuMonAn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>